# LabWorks

./: README.md  Конспект.md
FirstLab/: makefile  test.c
FirstLab_3sem/: .clangd  ArraySequence.h  BasicStructures.h  BidirectionalStream.hpp  Boyer-Moore-Horspool.hpp  Boyer-widget.cpp  Boyer-widget.hpp  DynamicArray.h  Error.cpp  Error.h  Exception.cpp  Exception.h  Exceptions.hpp  Functions.h  ImmutableArraySequence.h  ImmutableListSequence.h  LinkedList.h  ListSequence.h  Makefile  MonadPair.h  MonadTuple.h  NFA-to-DFA.hpp  NFA-widget.cpp  NFA-widget.hpp  NFA-windget.hpp  Option.h  Pair.h  Sequence.h  SpaceRemover-widget.cpp  SpaceRemover-widget.hpp  SpaceRemover.hpp  SpellChecker-widget.cpp  SpellChecker-widget.hpp  SpellChecker.hpp  UI.cpp  WriteOnlyStream.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  makefile  (+2 more)
SecondLab/: ArraySequence.h  DynamicArray.h  DynamicTupleFactory.h  Error.cpp  Error.h  Functions.h  ImmutableListSequence.h  LinkedList.h  MonadPair.h  MonadTuple.h  Option.h  Sequence.h  Training.h  UI.cpp  main.cpp  makefile  tests.cpp
SecondLab_3sem/: .clangd  CMakeLists.txt  compile_commands.json  task.txt
SeconfLab_3sem/: CMakeLists.txt  CodeComm.md  makefile
SeconfLab_3sem/hpp/: AlphabetIndex.hpp  Dictionary.hpp  GuiFunctions.hpp  HashFunc.hpp  HashTable.hpp  ICache.hpp  MyTypes.hpp
SeconfLab_3sem/output/: test
SeconfLab_3sem/qt/: CMakeLists.txt  main_qt.cpp  main_window.cpp
SeconfLab_3sem/test/: test.cpp
Summary 3 sem/: 1_Раздел.md  2_Раздел.md  3_Раздел.md  4_Раздел.md  5_Раздел.md  6_Раздел.md  README.md  Конспект.md
(+61 files in other folders)
